--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:textSize="@dimen/common_text"/>
+                android:textSize="@dimen/common_text"
+                android:inputType="textPassword"/>
 
         </LinearLayout>
 
