--- a/app/src/main/res/layout/amount_list_item.xml
+++ b/app/src/main/res/layout/amount_list_item.xml
@@ -19,7 +19,7 @@
             android:layout_row="0"
             android:layout_columnSpan="3"
             android:layout_columnWeight="3"
-            android:text="No amoount registered"
+            android:text="No amount registered"
             android:textSize="@dimen/list_item_text_size" />
 
         <TextView
