--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <dimen name="title">20dp</dimen>
+    <dimen name="greeting">18dp</dimen>
     <dimen name="common_text">14dp</dimen>
     <dimen name="margins">30dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
